--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -7072,6 +7072,7 @@ html-element-name=اسم عنصر HTML
 html-element-name-help=حدد أسماء عناصر مخصصة صالحة (استخدم فقط الأحرف الصغيرة وشرطة واحدة على الأقل).
 html-format=تنسيق HTML
 html-mode=وضع HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=عنوان الـ HTML
 html-title-help=سيتم تطبيق هذا النص على علامات تعريف العنوان داخل قسم العنوان في الصفحة. الطول الموصى به أقل من 60 حرفًا.
 http-client-factory-configuration-name=تكوين مصنع عميل HTTP
@@ -9248,6 +9249,7 @@ missing-instance-error=يُرجى تحديد مثيل واحد على الأقل
 missing-manifest.xml=لم يتم العثور على manifest.xml في LAR
 missing-redirect-uri=لم يقدم التطبيق معلمة الطلب "redirect_uri". يُرجى إبلاغ موفر الخدمة بالمشكلة.
 missing-requirement-conflict=تعارض بسبب فقدان المتطلب
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(الشهر/اليوم/السنة)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm
