--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML формат
 html-mode=Режим на HTML (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML заглавие
 html-title-help=Този текст ще се приложи към заглавния мета етикет в главата на страницата. Препоръчителната дължина е под 60 знака. (Automatic Translation)
 http-client-factory-configuration-name=Конфигуриране на клиент на HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml не е намерен в ЗУБ (Automatic Translation)
 missing-redirect-uri=Приложението не предостави параметъра "redirect_uri". Съобщете проблема на доставчика на приложението. (Automatic Translation)
 missing-requirement-conflict=Липсващо изискване конфликт (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(мм/дд/гггг)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, гггг, HH:мм (Automatic Translation)
