--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -7072,6 +7072,7 @@ html-element-name=Nom de l'element HTML
 html-element-name-help=Especifiqueu un nom d'elements personalitzats vàlid (feu servir només lletres amb minúscula i un guionet com a mínim).
 html-format=Format HTML
 html-mode=Mode HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Títol HTML
 html-title-help=Aquest text s'aplicarà a la metaetiqueta del títol de dins de la secció de capçalera de la pàgina. La llargada recomanada és de menys de 60 caràcters.
 http-client-factory-configuration-name=Configuració de fàbrica del client HTTP
@@ -9250,6 +9251,7 @@ missing-instance-error=Seleccioneu almenys una instància abans d'executar una a
 missing-manifest.xml=manifest.xml no trobat al LAR
 missing-redirect-uri=L'aplicació no ha proporcionat el paràmetre de sol·licitud "redirect_uri". Comuniqueu el problema al proveïdor de l'aplicació.
 missing-requirement-conflict=Conflicte d'obligatorietats que falten
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(d-m-yyyy)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=d MMM yyyy, HH:mm
