--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML formát
 html-mode=HTML Mód
+html-tag=HTML Tag (Automatic Copy)
 html-title=Titulek HTML
 html-title-help=Tento text bude použit na metaznačku nadpisu uvnitř části stránky v záhlaví. Doporučená délka je pod 60 znaků. (Automatic Translation)
 http-client-factory-configuration-name=Konfigurace tovární továrny klienta HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml nebyl nalezen v LAR (Automatic Translation)
 missing-redirect-uri=Aplikace neposkytla parametr požadavku "redirect_uri". Nahlaste problém poskytovateli aplikace. (Automatic Translation)
 missing-requirement-conflict=Konflikt chybějících požadavků (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(dd.mm.yyyy)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
