--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML-format (Automatic Translation)
 html-mode=HTML tilstand
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML titel
 html-title-help=Denne tekst anvendes på titelmetakoden i sidens hovedsektion. Den anbefalede længde er under 60 tegn. (Automatic Translation)
 http-client-factory-configuration-name=Konfiguration af HTTP-klientfabrik (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml ikke fundet i LAR (Automatic Translation)
 missing-redirect-uri=Programmet leverede ikke anmodningsparameteren "redirect_uri". Rapporter problemet til programudbyderen. (Automatic Translation)
 missing-requirement-conflict=Manglende kravkonflikt (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Copy)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
