--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML-Elementname
 html-element-name-help=Geben Sie einen gültigen Namen für benutzerdefinierte Elemente an (verwenden Sie nur Kleinbuchstaben und mindestens einen Bindestrich).
 html-format=HTML-Format
 html-mode=HTML-Modus
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML-Titel
 html-title-help=Dieser Text wird für das Title-Metatag im Kopfbereich der Seite angewendet. Die empfohlene Länge liegt bei unter 60 Zeichen.
 http-client-factory-configuration-name=Werkskonfiguration HTTP-Client
@@ -9250,6 +9251,7 @@ missing-instance-error=Bitte wählen Sie mindestens eine Instanz aus, bevor Sie 
 missing-manifest.xml=manifest.xml nicht im LAR gefunden
 missing-redirect-uri=Die Anwendung hat den Anfrageparameter "redirect_uri" nicht angegeben. Bitte melden Sie dem Anbieter der Anwendung das Problem.
 missing-requirement-conflict=Konflikt mit fehlender Anforderung
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/tt/jjjj)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=MMM d yyyy, HH:mm
