--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Μορφή HTML
 html-mode=Τρόπος HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Τίτλος HTML
 html-title-help=Αυτό το κείμενο θα εφαρμοστεί στο μετα-tag τίτλου μέσα στην ενότητα κεφαλής της σελίδας. Το συνιστώμενο μήκος είναι κάτω από 60 χαρακτήρες. (Automatic Translation)
 http-client-factory-configuration-name=Ρύθμιση παραμέτρων εργοστασίου προγράμματος-πελάτη HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=το αρχείο manifest.xml δεν βρέθηκε στο LAR (Automatic Translation)
 missing-redirect-uri=Η εφαρμογή δεν παρείχε την παράμετρο αίτησης "redirect_uri". Αναφέρετε το ζήτημα στον πάροχο της εφαρμογής. (Automatic Translation)
 missing-requirement-conflict=Διένεξη απαίτησης που λείπει (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(μήνας/μέρα/χρόνος)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=ΜΜΜ δ, yyyy, HH: χιλ. (Automatic Translation)
