--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -7072,6 +7072,7 @@ html-element-name=Nombre del elemento HTML
 html-element-name-help=Especifique un nombre válido de elementos personalizados (use solo letras minúsculas y como mínimo un guion).
 html-format=Formato HTML
 html-mode=Modo HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Título HTML
 html-title-help=Este texto se aplicará en la etiqueta meta del título, dentro de la sección de encabezado de la página. La longitud recomendada es inferior a 60 caracteres.
 http-client-factory-configuration-name=Configuración de fábrica de cliente HTTP
@@ -9250,6 +9251,7 @@ missing-instance-error=Seleccione como mínimo una instancia antes de ejecutar u
 missing-manifest.xml=manifest.xml no encontrado en el LAR
 missing-redirect-uri=La aplicación no proporcionó el parámetro de la petición "redirect_uri". Informe del problema al proveedor de la aplicación.
 missing-requirement-conflict=Conflicto por falta de requisito
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/aaaa)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm
