--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML formaat
 html-mode=HTML-režiim (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML pealkiri
 html-title-help=See tekst rakendatakse lehe peaosas olevale tiitlimetasildile. Soovitatav pikkus on alla 60 märgi. (Automatic Translation)
 http-client-factory-configuration-name=HTTP kliendi tehase konfiguratsioon (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml ei leitud LAR (Automatic Translation)
 missing-redirect-uri=Rakendus ei esitanud taotluse parameetrit "redirect_uri". Palun teatage probleemist rakenduse pakkujale. (Automatic Translation)
 missing-requirement-conflict=Puuduv nõudekonflikt (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(kk/pp/aaaa)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, aaaa, HH:mm (Automatic Translation)
