--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML-elementin nimi
 html-element-name-help=Määritä kelvollinen mukautettujen elementtien nimi (käytä vain pieniä kirjaimia ja ainakin yksi väliviiva).
 html-format=HTML-muoto
 html-mode=HTML moodi
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML-otsikko
 html-title-help=Tämä teksti tulee otsikon metatagiin sivun head-osion sisään. Suositeltu pituus on alle 60 merkkiä.
 http-client-factory-configuration-name=HTTP-asiakastehtaan Konfiguraatio
@@ -9248,6 +9249,7 @@ missing-instance-error=Valitse ainakin yksi instanssi ennen toiminnon suorittami
 missing-manifest.xml=manifest.xml:ää ei löydy LAR:sta
 missing-redirect-uri=Sovellus ei antanut pyynnön parametria "redirect_uri". Raportoi ongelma sovelluksen toimittajalle.
 missing-requirement-conflict=Puuttuva Vaatimus Ristiriita
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(kk/pp/vvvv)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=MMM d, yyyy, hh:mm
