--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -7072,6 +7072,7 @@ html-element-name=Nom de l'élément HTML
 html-element-name-help=Indiquez un nom d'élément personnalisé valide (utilisez uniquement des lettres minuscules et au moins un trait d'union).
 html-format=Format de HTML
 html-mode=Mode de HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Titre HTML
 html-title-help=Ce texte sera appliqué à la balise méta de titre dans la section en-tête de la page. La taille recommandée est inférieure à 60 caractères.
 http-client-factory-configuration-name=Configuration d'usine du client HTTP
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml introuvable dans le LAR
 missing-redirect-uri=L'application n'a pas fourni le paramètre "redirect_uri" obligatoire. Veuillez signaler ce problème au fournisseur de l'application.
 missing-requirement-conflict=Conflit d'exigences manquantes
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/jj/aaaa)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=d MMM yyyy, HH:mm
