--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML प्रारूप
 html-mode=HTML मोड
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML शीर्षक
 html-title-help=यह टेक्स्ट पेज के हेड सेक्शन के अंदर टाइटल मेटा टैग पर लागू होगा। अनुशंसित लंबाई 60 अक्षरों के तहत है। (Automatic Translation)
 http-client-factory-configuration-name=HTTP क्लाइंट फैक्टरी कॉन्फ़िगरेशन (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=प्रकट.xml LAR में नहीं मिला (Automatic Translation)
 missing-redirect-uri=आवेदन अनुरोध पैरामीटर "redirect_uri" प्रदान नहीं किया। कृपया आवेदन प्रदाता को इस मुद्दे की रिपोर्ट करें। (Automatic Translation)
 missing-requirement-conflict=लापता आवश्यकता संघर्ष
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=एमएमएम डी, वाईय, एचएच:मिमी (Automatic Translation)
