--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML-elem neve
 html-element-name-help=Adjon meg egy érvényes egyéni elemnevet (csak kisbetűket és legalább egy kötőjelet használjon).
 html-format=HTML formázás
 html-mode=HTML mód
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML cím
 html-title-help=Ez a szöveg lesz alkalmazva az alkalmazás fejlécében lévő cím metacímkéjére. Az ajánlott hossz legfeljebb 60 karakter.
 http-client-factory-configuration-name=HTTP ügyfél gyári konfigurációja
@@ -9251,6 +9252,7 @@ missing-instance-error=Válasszon legalább egy példányt, mielőtt végrehajt 
 missing-manifest.xml=A manifest.xml nem található az LAR-ben
 missing-redirect-uri=Az alkalmazás nem adta meg a kérelem "redirect_uri" paraméterét. Kérjük, jelentse a problémát az alkalmazás szolgáltatójának.
 missing-requirement-conflict=Hiányzó kötelező adat ütközése
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(hh/nn/éééé)
 mmm-d=HHH n
 mmm-d-yyyy-hh-mm=HHH n, éééé, ÓÓ:pp
