--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Format HTML
 html-mode=HTML Mode (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=Judul HTML
 html-title-help=Teks ini akan diterapkan ke tag meta judul di dalam bagian kepala halaman. Panjang yang disarankan di bawah 60 karakter. (Automatic Translation)
 http-client-factory-configuration-name=Konfigurasi Pabrik Klien HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml tidak ditemukan di LAR (Automatic Translation)
 missing-redirect-uri=Aplikasi tidak memberikan parameter permintaan "redirect_uri". Silakan laporkan masalah ini ke penyedia aplikasi. (Automatic Translation)
 missing-requirement-conflict=Konflik Persyaratan Hilang (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
