--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7071,6 +7071,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Formato HTML
 html-mode=Modo HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Titolo HTML
 html-title-help=Questo testo verrà applicato al meta tag title all'interno della sezione head della pagina. La lunghezza consigliata è inferiore a 60 caratteri. (Automatic Translation)
 http-client-factory-configuration-name=Configurazione factory client HTTP (Automatic Translation)
@@ -9249,6 +9250,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml non trovato nel LAR (Automatic Translation)
 missing-redirect-uri=L'applicazione non ha fornito il parametro di richiesta "redirect_uri". Si prega di segnalare il problema al fornitore dell'applicazione.
 missing-requirement-conflict=Conflitto di requisiti mancante (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/gg/aaaa)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, aaaa, HH:mm (Automatic Translation)
