--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=פורמט HTML
 html-mode=מצב HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=כותרת HTML
 html-title-help=טקסט זה יוחל על המטה-תג של הכותרת בתוך מקטע הכותרת של הדף. האורך המומלץ הוא פחות מ- 60 תווים. (Automatic Translation)
 http-client-factory-configuration-name=תצורת מפעל של לקוח HTTP
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest. xml לא נמצא ב-LAR
 missing-redirect-uri=היישום לא סיפק את פרמטר הבקשה "redirect_uri". נא לדווח על הבעיה לספק היישום.
 missing-requirement-conflict=התנגשות דרישות חסרה (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=חודש/יום/שנה
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:מ"מ (Automatic Translation)
