--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML 要素名
 html-element-name-help=有効なカスタム要素名を指定してください (小文字のみでハイフンを 1 つ以上使用してください)。
 html-format=HTMLのフォーマット
 html-mode=HTMLモード
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTMLタイトル
 html-title-help=このテキストはページのheadセクション内のtitleメタタグに適用されます。推奨される長さは60文字未満です。
 http-client-factory-configuration-name=HTTP Client Factory 設定
@@ -9250,6 +9251,7 @@ missing-instance-error=アクションを実行する前に 1 つ以上のイン
 missing-manifest.xml=manifest.xml がLARの中に見つかりません
 missing-redirect-uri=アプリケーションはリクエストパラメータ "redirect_uri" を提供しませんでした。アプリケーションの提供元に問題のご報告をお願いします。
 missing-requirement-conflict=不足している要件の競合
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(月/日/年)
 mmm-d=M月d日
 mmm-d-yyyy-hh-mm=yyyy年MMM月d日 HH:mm
