--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML체재
 html-mode=HTML 형태
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML제목
 html-title-help=이 텍스트는 페이지의 머리 섹션 내부의 제목 메타 태그에 적용됩니다. 권장 길이는 60자 미만입니다. (Automatic Translation)
 http-client-factory-configuration-name=HTTP 클라이언트 공장 구성 (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=LAR에서 찾을 수 없는 매니페스트.xml (Automatic Translation)
 missing-redirect-uri=응용 프로그램은 요청 매개 변수 "redirect_uri"을 제공하지 않았습니다. 응용 프로그램 공급자에게 문제를 보고하십시오. (Automatic Translation)
 missing-requirement-conflict=누락된 요구 사항 충돌 (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
