--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML formatas (Automatic Translation)
 html-mode=HTML režimas (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML pavadinimas (Automatic Translation)
 html-title-help=Šis tekstas bus taikomas pavadinimo metažymei puslapio galvos dalyje. Rekomenduojamas ilgis yra jaunesnis nei 60 simbolių. (Automatic Translation)
 http-client-factory-configuration-name=HTTP kliento gamyklos konfigūracija (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml nerasta LAR (Automatic Translation)
 missing-redirect-uri=Programa nepateikė užklausos parametro "redirect_uri". Praneškite apie problemą programos teikėjui. (Automatic Translation)
 missing-requirement-conflict=Trūksta reikalavimo konflikto (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
