--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML Format (Automatic Translation)
 html-mode=Mod HTML (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=Tajuk HTML (Automatic Translation)
 html-title-help=Teks ini akan digunakan pada tag meta tajuk di dalam bahagian kepala halaman. Panjang yang disyorkan adalah di bawah 60 aksara. (Automatic Translation)
 http-client-factory-configuration-name=Konfigurasi Kilang Pelanggan HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml tidak dijumpai di LAR (Automatic Translation)
 missing-redirect-uri=Permohonan itu tidak menyediakan parameter permintaan "redirect_uri". Sila laporkan isu tersebut kepada penyedia aplikasi. (Automatic Translation)
 missing-requirement-conflict=Konflik Keperluan Hilang (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
