--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML-format
 html-mode=HTML-modus
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML-tittel
 html-title-help=Denne teksten vil bli angitt som tittelmetatagg i head-seksjonen av siden. Den anbefalte lengden er mindre enn 60 tegn.
 http-client-factory-configuration-name=Fabrikkkonfigurasjon for HTTP-klient (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml ikke funnet i LAR (Automatic Translation)
 missing-redirect-uri=Applikasjonen angav ikke forespørselparameteret "redirect_uri". Vennligst rapporter denne feilen til applikasjontilbyderen.
 missing-requirement-conflict=Konflikt om manglende krav (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/åååå)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, å si, TT:mm (Automatic Translation)
