--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -7072,6 +7072,7 @@ html-element-name=Naam HTML-element
 html-element-name-help=Geef een geldige naam op voor de aangepaste elementen (gebruik alleen kleine letters en ten minste één koppelteken).
 html-format=HTML-indeling
 html-mode=HTML-modus
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML-titel
 html-title-help=Deze tekst wordt toegepast voor de titel metatag in de kop van de pagina. De aanbevolen lengte is maximaal 60 tekens.
 http-client-factory-configuration-name=Fabrieksconfiguratie HTTP client
@@ -9251,6 +9252,7 @@ missing-instance-error=Selecteer minstens één instantie voordat u een actie ui
 missing-manifest.xml=manifest.xml niet gevonden in de LAR
 missing-redirect-uri=De applicatie heeft de gevraagde parameter 'redirect_uri' niet opgegeven. Meld het probleem bij de provider van de applicatie.
 missing-requirement-conflict=Conflict door ontbrekende vereiste
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm//dd/jjjj)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=d MMM yyyy, HH:mm
