--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML-formattering
 html-mode=HTML-mode
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML-titel
 html-title-help=This text will be applied to the title meta tag inside the head section of the page. The recommended length is under 60 characters. (Automatic Copy)
 http-client-factory-configuration-name=HTTP Client Factory Configuration (Automatic Copy)
@@ -9251,6 +9252,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml not found in the LAR (Automatic Copy)
 missing-redirect-uri=The application did not provide the request parameter "redirect_uri". Please report the issue to the application provider. (Automatic Copy)
 missing-requirement-conflict=Missing Requirement Conflict (Automatic Copy)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm//dd/jjjj)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Copy)
