--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Format HTML
 html-mode=Tryb HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Tytuł HTML
 html-title-help=Ten tekst zostanie zastosowany do metatagu tytułu w sekcji głównej strony. Zalecana długość wynosi poniżej 60 znaków. (Automatic Translation)
 http-client-factory-configuration-name=Konfiguracja fabryki klienta HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=nie znaleziono pliku manifest.xml w (Automatic Translation)
 missing-redirect-uri=Aplikacja nie dostarczyła parametru żądania "redirect_uri". Zgłoś problem dostawcy aplikacji. (Automatic Translation)
 missing-requirement-conflict=Brak konfliktu wymagań (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/rrrr)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
