--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -7072,6 +7072,7 @@ html-element-name=Nome do Elemento HTML
 html-element-name-help=Especifique um nome de elemento personalizado (usar apenas letras minúsculas e pelo menos um hífen).
 html-format=Formato HTML
 html-mode=Modo HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Título HTML
 html-title-help=Este texto será aplicado ao marcador de metadados de título dentro da seção de cabeçalho da página. O comprimento recomendado é de cerca de 60 caracteres.
 http-client-factory-configuration-name=Configuração de Fábrica do Cliente HTTP
@@ -9248,6 +9249,7 @@ missing-instance-error=Selecione pelo menos uma instância antes de executar uma
 missing-manifest.xml=manifest.xml não encontrado no LAR
 missing-redirect-uri=A aplicativo não forneceu o parâmetro "redirect_uri" solicitado. Por favor, informe o problema ao provedor do aplicativo.
 missing-requirement-conflict=Conflito por obrigatoriedade em falta
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(dd/mm/yyyy)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=d MMM, yyyy, HH:mm
