--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Formato HTML
 html-mode=Modo HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Título HTML
 html-title-help=Este texto será aplicado à meta tag de título dentro da seção principal da página. O comprimento recomendado é inferior a 60 caracteres. (Automatic Translation)
 http-client-factory-configuration-name=Configuração de fábrica do cliente HTTP (Automatic Translation)
@@ -9250,6 +9251,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifesto.xml não encontrado no LAR (Automatic Translation)
 missing-redirect-uri=O aplicativo não forneceu o parâmetro de solicitação "redirect_uri". Por favor, informe o problema ao provedor de aplicativos. (Automatic Translation)
 missing-requirement-conflict=Conflito de exigências ausentes (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Copy)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
