--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Format HTML
 html-mode=Mod HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Titlu HTML
 html-title-help=Acest text va fi aplicat etichetei meta titlu din secțiunea principală a paginii. Lungimea recomandată este sub 60 de caractere. (Automatic Translation)
 http-client-factory-configuration-name=Configurare client client HTTP din fabrică (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml nu s-a găsit în LAR (Automatic Translation)
 missing-redirect-uri=Aplicația nu a furnizat parametrul de solicitare "redirect_uri". Vă rugăm să raportați problema furnizorului aplicației. (Automatic Translation)
 missing-requirement-conflict=Conflict cerință lipsă (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(ll/zz/aaaa)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, aaaa, HH:mm (Automatic Translation)
