--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Формат HTML
 html-mode=Режим HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Заголовок HTML
 html-title-help=Этот текст будет применяться к заголовку мета-тега в головной части страницы. Рекомендуемая длина составляет менее 60 символов. (Automatic Translation)
 http-client-factory-configuration-name=Конфигурация фабрики клиентов HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml не найдено в LAR (Automatic Translation)
 missing-redirect-uri=В заявке не был у него параметр запроса "redirect_uri". Пожалуйста, сообщите о проблеме поставщику приложений. (Automatic Translation)
 missing-requirement-conflict=Пропавший конфликт требований (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(мм/дд/гггг)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=МММ д, yyyy, HH:mm (Automatic Translation)
