--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML formát
 html-mode=HTML mód
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML nadpis
 html-title-help=Tento text sa použije na metaznač nadpisu v časti nadpisu strany. Odporúčaná dĺžka je menej ako 60 znakov. (Automatic Translation)
 http-client-factory-configuration-name=Konfigurácia výrobcu klienta HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml nebol nájdený v LAR (Automatic Translation)
 missing-redirect-uri=Aplikácia neposkytla parameter požiadavky "redirect_uri". Nahláste problém poskytovateľovi aplikácie. (Automatic Translation)
 missing-requirement-conflict=Chýbajúci konflikt požiadaviek (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/ďď/rrrr)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyy, HH:mm (Automatic Translation)
