--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML format
 html-mode=NAČIN HTML (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML naslov
 html-title-help=To besedilo bo uporabljeno za meta oznako naslova znotraj glave strani. Priporočena dolžina je pod 60 znakov. (Automatic Translation)
 http-client-factory-configuration-name=Konfiguracija tovarne odjemalca HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml ni bil najden v LAR (Automatic Translation)
 missing-redirect-uri=Aplikacija ni zagotovila parametra zahteve "redirect_uri". O težavi obvestite ponudnika aplikacije. (Automatic Translation)
 missing-requirement-conflict=Manjkajoči spor v zahtevah (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm (Automatic Translation)
