--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -7072,6 +7072,7 @@ html-element-name=Namn på HTML-element
 html-element-name-help=Ange ett giltigt anpassat elementnamn (använd bara gemener och minst ett bindestreck).
 html-format=HTML-format
 html-mode=HTML-läge
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML-titel
 html-title-help=Den här texten kommer att appliceras på titelns metatagg inuti huvudsektionen på sidan. Den rekommenderade längden är mindre än 60 tecken.
 http-client-factory-configuration-name=Fabrikskonfiguration för HTTP-klient
@@ -9248,6 +9249,7 @@ missing-instance-error=Välj minst en instans innan du utför en åtgärd.
 missing-manifest.xml=manifest.xml hittades inte i LAR
 missing-redirect-uri=Applikationen tillhandahöll inte parameter för begäran "redirect_uri". Rapportera problemet till applikationsleverantören.
 missing-requirement-conflict=Konflikt i krav som saknas
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/åååå)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=d MMM yyyy, HH:mm
