--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=รูปแบบ HTML
 html-mode=โหมด HTML (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=ชื่อ HTML
 html-title-help=ข้อความนี้จะถูกนําไปใช้กับเมตาแท็กชื่อเรื่องภายในส่วนหัวของหน้า ความยาวที่แนะนําคือต่ํากว่า 60 อักขระ (Automatic Translation)
 http-client-factory-configuration-name=การกําหนดค่าโรงงานของลูกค้า HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=ไม่พบ manifest.xml ใน LAR (Automatic Translation)
 missing-redirect-uri=โปรแกรมประยุกต์ไม่ได้ให้พารามิเตอร์การร้องขอ "redirect_uri" โปรดรายงานปัญหาไปยังผู้ให้บริการโปรแกรมประยุกต์ (Automatic Translation)
 missing-requirement-conflict=ข้อขัดแย้งของความต้องการขาดหายไป (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(วว/ดด/ปปปป) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, ปปปป, HH:mm (Automatic Translation)
