--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML Formatı
 html-mode=HTML Modu (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML Başlığı
 html-title-help=Bu metin, sayfanın baş bölümünün içindeki başlık meta etiketine uygulanır. Önerilen uzunluk 60 karakterin altındadır. (Automatic Translation)
 http-client-factory-configuration-name=HTTP İstemci Fabrikası Yapılandırması (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml LAR bulunamadı (Automatic Translation)
 missing-redirect-uri=Uygulama "redirect_uri" istek parametresini sağlamadı. Lütfen sorunu uygulama sağlayıcısına bildirin. (Automatic Translation)
 missing-requirement-conflict=Eksik Gereksinim Çakışması (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(dd/mm/yyyy)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, SS:mm (Automatic Translation)
