--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Формат HTML
 html-mode=Режим HTML (Automatic Translation)
+html-tag=HTML Tag (Automatic Copy)
 html-title=Заголовок HTML
 html-title-help=Цей текст буде застосовано до метатеґу заголовка у головному розділі сторінки. Рекомендована довжина не може бути менше 60 символів. (Automatic Translation)
 http-client-factory-configuration-name=Заводська конфігурація клієнта HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml не знайдено в LAR (Automatic Translation)
 missing-redirect-uri=Додаток не надав параметр запиту "redirect_uri". Повідомте про проблему постачальнику застосунку. (Automatic Translation)
 missing-requirement-conflict=Відсутній конфлікт вимог (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(мм/дд/років) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=МММ D, yyyy, HH:mm (Automatic Translation)
