--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=Định dạng HTML
 html-mode=Chế độ HTML
+html-tag=HTML Tag (Automatic Copy)
 html-title=Tiêu đề HTML
 html-title-help=Văn bản này sẽ được áp dụng cho thẻ meta tiêu đề bên trong phần đầu của trang. Độ dài được đề xuất dưới 60 ký tự. (Automatic Translation)
 http-client-factory-configuration-name=Cấu hình nhà máy máy khách HTTP (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml không tìm thấy trong LAR (Automatic Translation)
 missing-redirect-uri=Ứng dụng không cung cấp tham số yêu cầu "redirect_uri". Vui lòng báo cáo sự cố cho nhà cung cấp ứng dụng. (Automatic Translation)
 missing-requirement-conflict=Thiếu xung đột yêu cầu (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(mm/dd/yyyy) (Automatic Translation)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyyy, HH: mm (Automatic Translation)
