--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML 元素名称
 html-element-name-help=指定有效的自定义元素名称（仅使用小写字母和至少一个连字符）。
 html-format=HTML格式
 html-mode=HTML模式
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML标题
 html-title-help=此文本将应用到页面标题部分中的标题元标记。建议长度少于 60 个字符。
 http-client-factory-configuration-name=HTTP 客户端出厂配置
@@ -9250,6 +9251,7 @@ missing-instance-error=请在执行操作前至少选择一个实例。
 missing-manifest.xml=在LAR中找不到manifest.xml
 missing-redirect-uri=应用程序未提供请求参数"redirect_uri"。请将问题报告给应用程序提供商。
 missing-requirement-conflict=缺少要求冲突
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=（月/日/年）
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=yyyy MMM d HH:mm
