--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML 元素名稱
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=HTML 格式
 html-mode=HTML方式
+html-tag=HTML Tag (Automatic Copy)
 html-title=HTML 標題
 html-title-help=此文本將應用到頁面標題部分中的標題 meta 標籤。建議長度少於 60 個字元。
 http-client-factory-configuration-name=HTTP Client Factory Configuration
@@ -9249,6 +9250,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=在 LAR 中找不到 manifest.xml
 missing-redirect-uri=該應用程式沒有提供請求參數"redirect_uri"。請向應用程式供應商報告問題。 (Automatic Translation)
 missing-requirement-conflict=缺少的需求衝突
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(月/日/年)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=yyyy MMM d HH:mm
