--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -7072,6 +7072,7 @@ html-element-name=HTML Element Name (Automatic Copy)
 html-element-name-help=Specify a valid custom elements name (use only lowercase letters and at least one hyphen). (Automatic Copy)
 html-format=قالب HTML
 html-mode=حالت html
+html-tag=HTML Tag (Automatic Copy)
 html-title=عنوان html
 html-title-help=این متن به عنوان برچسب متا در داخل بخش سر صفحه اعمال خواهد شد. طول توصیه شده زیر ۶۰ کاراکتر است. (Automatic Translation)
 http-client-factory-configuration-name=HTTP مشتری پیکربندی کارخانه (Automatic Translation)
@@ -9248,6 +9249,7 @@ missing-instance-error=Please select at least one instance before executing an A
 missing-manifest.xml=manifest.xml در LAR یافت نشد (Automatic Translation)
 missing-redirect-uri=نرم افزار پارامتر درخواست "redirect_uri". لطفا موضوع را به ارائه دهنده برنامه گزارش دهید. (Automatic Translation)
 missing-requirement-conflict=درگیری مورد نیاز از دست رفته (Automatic Translation)
+misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
 mm-dd-yyyy=(سال/روز/ماه)
 mmm-d=MMM d (Automatic Copy)
 mmm-d-yyyy-hh-mm=MMM d, yyy, HH:mm (Automatic Translation)
